# GAAP-Implementation-Toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
open_tax_toolkit/: __init__.py  cli.py
open_tax_toolkit/cross_border/: __init__.py  network.py  pattern.py  risk_scoring.py
open_tax_toolkit/filing_irregularities/: __init__.py  consistency.py  numerical.py
open_tax_toolkit/transfer_pricing/: __init__.py  benford.py  comparability.py  profit_indicator.py
open_tax_toolkit/utils/: __init__.py  data_gen.py  stats.py
tests/: test_cross_border.py  test_filing_irregularities.py  test_transfer_pricing.py
