[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-tax-toolkit"
version = "0.1.0"
description = "Computational methods for detecting tax compliance anomalies — transfer pricing manipulation, filing irregularities, and cross-border transaction fraud."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
maintainers = [
    { name = "Wang-Cankun" },
]
keywords = [
    "tax-compliance",
    "anomaly-detection",
    "transfer-pricing",
    "fraud-detection",
    "cross-border-transactions",
    "NLP",
    "financial-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
nlp = [
    "spacy>=3.5",
    "sentence-transformers>=2.2",
]

[project.scripts]
tax-toolkit = "open_tax_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/JiayanFan/Open-Tax-Infra-Toolkit"
Repository = "https://github.com/JiayanFan/Open-Tax-Infra-Toolkit"
Issues = "https://github.com/JiayanFan/Open-Tax-Infra-Toolkit/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
